--- a/src/index.html
+++ b/src/index.html
@@ -3,33 +3,30 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <title>Document</title>
 </head>
 <body>
-  <header class="header container-fluid">
-    <div class="nav-container row">
-      <nav class="nav-container__nav navbar navbar-expand-lg col">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-          <img src="./assets/img/hamburger.png" alt="hamburger icon">
+  <header class="header">
+    <div class="nav-container">
+      <nav class="navigation">
+        <button class="navigation__button">
+          <img class="navigation__hamburger-icon" src="./assets/img/hamburger.png" alt="hamburger icon">
         </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav">
-            <a class="nav-container__links nav-item nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-            <a class="nav-container__links nav-item nav-link" href="#">Shop</a>
-            <a class="nav-container__links nav-item nav-link" href="#">Elements</a>
-            <a class="nav-container__links nav-item nav-link" href="#">Blog</a>
-            <a class="nav-container__links nav-item nav-link" href="#">Page</a>
-          </div>
+        <div class="navigation__cnt">
+          <a class="navigation__link" href="#">Home</a>
+          <a class="navigation__link" href="#">Shop</a>
+          <a class="navigation__link" href="#">Elements</a>
+          <a class="navigation__link" href="#">Blog</a>
+          <a class="navigation__link" href="#">Page</a>
         </div>
       </nav>
-      <div class="nav-container__logo col d-flex align-items-center justify-content-center">
-        <img src="./assets/img/logo-zonex.png" alt="Zonex company logo">
+      <div class="logo-cnt">
+        <img class="logo-cnt__logo" src="./assets/img/logo-zonex.png" alt="Zonex company logo">
       </div>
-      <div class="nav-container__icons col d-flex align-items-center justify-content-end">
-        <img src="./assets/img/user.png" alt="Icon of an user">
-        <img src="./assets/img/bag.png" alt="Icon of basket">
-        <p>3</p>
+      <div class="icons-cnt">
+        <img class="icons-cnt__icon" src="./assets/img/user.png" alt="Icon of an user">
+        <img class="icons-cnt__icon" src="./assets/img/bag.png" alt="Icon of basket">
+        <p class="icons-cnt__count">3</p>
       </div>
     </div>
   </header>
@@ -139,7 +136,7 @@
       <div class="arrivals__item">
         <img class="arrivals__img" src="https://via.placeholder.com/309x390" alt="placeholder"/>
         <div class="arrivals__info-cnt">
-          <p class="arrivals__info arrivals__info--distinction">New!</p>
+          <p class="arrivals__info arrivals__info--distinction"><img class="arrivals__icon" src="./assets/img/bolt.png" alt="bolt icon">NEW</p>
           <p class="arrivals__info arrivals__info">Some fancy outfit</p>
           <p class="arrivals__info arrivals__info--distinction">$300</p>
         </div>
@@ -147,7 +144,7 @@
       <div class="arrivals__item">
         <img class="arrivals__img" src="https://via.placeholder.com/309x390" alt="placeholder"/>
         <div class="arrivals__info-cnt">
-          <p class="arrivals__info arrivals__info--distinction">New!</p>
+          <p class="arrivals__info arrivals__info--distinction arrivals__info--hidden">New!</p>
           <p class="arrivals__info arrivals__info">Some fancy outfit</p>
           <p class="arrivals__info arrivals__info--distinction">$300</p>
         </div>
@@ -155,7 +152,7 @@
       <div class="arrivals__item">
         <img class="arrivals__img" src="https://via.placeholder.com/309x390" alt="placeholder"/>
         <div class="arrivals__info-cnt">
-          <p class="arrivals__info arrivals__info--distinction">New!</p>
+          <p class="arrivals__info arrivals__info--distinction arrivals__info--hidden">New!</p>
           <p class="arrivals__info arrivals__info">Some fancy outfit</p>
           <p class="arrivals__info arrivals__info--distinction">$300</p>
         </div>
@@ -163,7 +160,7 @@
       <div class="arrivals__item">
         <img class="arrivals__img" src="https://via.placeholder.com/309x390" alt="placeholder"/>
         <div class="arrivals__info-cnt">
-          <p class="arrivals__info arrivals__info--distinction">New!</p>
+          <p class="arrivals__info arrivals__info--distinction"><img class="arrivals__icon" src="./assets/img/medal.png" alt="medal icon">BEST SELLER</p>
           <p class="arrivals__info arrivals__info">Some fancy outfit</p>
           <p class="arrivals__info arrivals__info--distinction">$300</p>
         </div>
@@ -171,7 +168,7 @@
       <div class="arrivals__item">
         <img class="arrivals__img" src="https://via.placeholder.com/309x390" alt="placeholder"/>
         <div class="arrivals__info-cnt">
-          <p class="arrivals__info arrivals__info--distinction">New!</p>
+          <p class="arrivals__info arrivals__info--distinction"><img class="arrivals__icon" src="./assets/img/medal.png" alt="medal icon">BEST SELLER</p>
           <p class="arrivals__info arrivals__info">Some fancy outfit</p>
           <p class="arrivals__info arrivals__info--distinction">$300</p>
         </div>
@@ -179,7 +176,7 @@
       <div class="arrivals__item">
         <img class="arrivals__img" src="https://via.placeholder.com/309x390" alt="placeholder"/>
         <div class="arrivals__info-cnt">
-          <p class="arrivals__info arrivals__info--distinction">New!</p>
+          <p class="arrivals__info arrivals__info--distinction"><img class="arrivals__icon" src="./assets/img/fire.png" alt="fire icon">HOT!</p>
           <p class="arrivals__info arrivals__info">Some fancy outfit</p>
           <p class="arrivals__info arrivals__info--distinction">$300</p>
         </div>
@@ -187,7 +184,7 @@
       <div class="arrivals__item">
         <img class="arrivals__img" src="https://via.placeholder.com/309x390" alt="placeholder"/>
         <div class="arrivals__info-cnt">
-          <p class="arrivals__info arrivals__info--distinction">New!</p>
+          <p class="arrivals__info arrivals__info--distinction"><img class="arrivals__icon" src="./assets/img/star.png" alt="star icon">TOP RATE</p>
           <p class="arrivals__info arrivals__info">Some fancy outfit</p>
           <p class="arrivals__info arrivals__info--distinction">$300</p>
         </div>
@@ -195,7 +192,7 @@
       <div class="arrivals__item">
         <img class="arrivals__img" src="https://via.placeholder.com/309x390" alt="placeholder"/>
         <div class="arrivals__info-cnt">
-          <p class="arrivals__info arrivals__info--distinction">New!</p>
+          <p class="arrivals__info arrivals__info--distinction"><img class="arrivals__icon" src="./assets/img/few.png" alt="star icon">ONLY A FEW LEFT</p>
           <p class="arrivals__info arrivals__info">Some fancy outfit</p>
           <p class="arrivals__info arrivals__info--distinction">$300</p>
         </div>
@@ -259,23 +256,27 @@
         </div>
         <div class="footer__policy">
           <a href="#" class="footer__policy-item">Returns Policy</a>
-          <a href="#" class="footer__policy-item">Privacy Policy</a>
-          <a href="#" class="footer__policy-item">Privacy Policy</a>
+          <a href="#" class="footer__policy-item">Track Your Order</a>
+          <a href="#" class="footer__policy-item">Shipping & Delivery</a>
         </div>
         <div class="footer__nationality">
-          <label for="currency" class="footer__nationality-label">Currency</label>
-          <select id="currency" class="footer__nationality-select">
-            <option value="USD">USD</option>
-            <option value="EUR">EUR</option>
-            <option value="GBP">GBP</option>
-            <option value="PLN">PLN</option>
-          </select>
-          <label for="language" class="footer__nationality-label">Language</label>
-          <select id="language" class="footer__nationality-select">
-            <option value="english">ENGLISH</option>
-            <option value="polish">POLISH</option>
-            <option value="german">GERMAN</option>
-          </select>
+         <div>
+            <label for="currency" class="footer__nationality-label">Currency</label>
+            <select id="currency" class="footer__nationality-select">
+              <option value="USD">USD</option>
+              <option value="EUR">EUR</option>
+              <option value="GBP">GBP</option>
+              <option value="PLN">PLN</option>
+            </select>
+         </div>
+         <div>
+            <label for="language" class="footer__nationality-label">Language</label>
+            <select id="language" class="footer__nationality-select">
+              <option value="english">ENGLISH</option>
+              <option value="polish">POLISH</option>
+              <option value="german">GERMAN</option>
+            </select>
+          </div>
         </div>
       </div>
       <div class="footer__bottom-section">
@@ -286,8 +287,5 @@
       </div>
     </div>
   </footer>
-  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 </body>
 </html>
