Add solution to homework 3

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
   <title>Document</title>
 </head>
 <body>
+  <button class="scroll-arrow">&#x2191;</button>
   <header class="header">
     <div class="nav-container">
       <nav class="navigation">
