--- a/src/index.html
+++ b/src/index.html
@@ -34,203 +34,31 @@
   <section class="carousel-wrapper">
     <div class="carousel">
       <div class="carousel__content">
-        <div class="carousel__item">
-          <img class="carousel__img" src="https://via.placeholder.com/268x338" alt="placeholder"/>
-          <div class="carousel__info-cnt">
-            <p class="carousel__info">Sample text 1</p>
-            <p class="carousel__info">$50 - $60</p>
-          </div>
-        </div>
-        <div class="carousel__item">
-          <img class="carousel__img" src="https://via.placeholder.com/268x338" alt="placeholder"/>
-          <div class="carousel__info-cnt">
-            <p class="carousel__info">Sample text 2</p>
-            <p class="carousel__info">$50 - $60</p>
-          </div>
-        </div>
-        <div class="carousel__item">
-          <img class="carousel__img" src="https://via.placeholder.com/268x338" alt="placeholder"/>
-          <div class="carousel__info-cnt">
-            <p class="carousel__info">Sample text 3</p>
-            <p class="carousel__info">$50 - $60</p>
-          </div>
-        </div>
-        <div class="carousel__item">
-          <img class="carousel__img" src="https://via.placeholder.com/268x338" alt="placeholder"/>
-          <div class="carousel__info-cnt">
-            <p class="carousel__info">Sample text 4</p>
-            <p class="carousel__info">$50 - $60</p>
-          </div>
-        </div>
-        <div class="carousel__item">
-          <img class="carousel__img" src="https://via.placeholder.com/268x338" alt="placeholder"/>
-          <div class="carousel__info-cnt">
-            <p class="carousel__info">Sample text 5</p>
-            <p class="carousel__info">$50 - $60</p>
-          </div>
-        </div>
-        <div class="carousel__item">
-          <img class="carousel__img" src="https://via.placeholder.com/268x338" alt="placeholder"/>
-          <div class="carousel__info-cnt">
-            <p class="carousel__info">Sample text 6</p>
-            <p class="carousel__info">$50 - $60</p>
-          </div>
-        </div>
-        <div class="carousel__item">
-          <img class="carousel__img" src="https://via.placeholder.com/268x338" alt="placeholder"/>
-          <div class="carousel__info-cnt">
-            <p class="carousel__info">Sample text 7</p>
-            <p class="carousel__info">$50 - $60</p>
-          </div>
-        </div>
-        <div class="carousel__item">
-          <img class="carousel__img" src="https://via.placeholder.com/268x338" alt="placeholder"/>
-          <div class="carousel__info-cnt">
-            <p class="carousel__info">Sample text 8</p>
-            <p class="carousel__info">$50 - $60</p>
-          </div>
-        </div>
-        <div class="carousel__item">
-          <img class="carousel__img" src="https://via.placeholder.com/268x338" alt="placeholder"/>
-          <div class="carousel__info-cnt">
-            <p class="carousel__info">Sample text 9</p>
-            <p class="carousel__info">$50 - $60</p>
-          </div>
-        </div>
-        <div class="carousel__item">
-          <img class="carousel__img" src="https://via.placeholder.com/268x338" alt="placeholder"/>
-          <div class="carousel__info-cnt">
-            <p class="carousel__info">Sample text 10</p>
-            <p class="carousel__info">$50 - $60</p>
-          </div>
-        </div>
-        <div class="carousel__item">
-          <img class="carousel__img" src="https://via.placeholder.com/268x338" alt="placeholder"/>
-          <div class="carousel__info-cnt">
-            <p class="carousel__info">Sample text 11</p>
-            <p class="carousel__info">$50 - $60</p>
-          </div>
-        </div>
-        <div class="carousel__item">
-          <img class="carousel__img" src="https://via.placeholder.com/268x338" alt="placeholder"/>
-          <div class="carousel__info-cnt">
-            <p class="carousel__info">Sample text 12</p>
-            <p class="carousel__info">$50 - $60</p>
-          </div>
-        </div>
-        <div class="carousel__item">
-          <img class="carousel__img" src="https://via.placeholder.com/268x338" alt="placeholder"/>
-          <div class="carousel__info-cnt">
-            <p class="carousel__info">Sample text 13</p>
-            <p class="carousel__info">$50 - $60</p>
-          </div>
-        </div>
+      </div>
+      <div class="loader loader--bright">
+        <div class="loader__box loader__box--kinetic"></div>
+        <div class="loader__text">Waiting for data</div>
       </div>
     </div>
     <button class="carousel__button carousel__button--prev">&#8592;</button>
     <button class="carousel__button carousel__button--next">&#8594;</button>
-  </section>
-    
+  </section>   
   <section class="arrivals">
     <h2 class="arrivals__headline">New Arrivals</h2>
     <div class="arrivals__content">
-      <div class="arrivals__item">
-        <img class="arrivals__img" src="https://via.placeholder.com/309x390" alt="placeholder"/>
-        <div class="arrivals__info-cnt">
-          <p class="arrivals__info arrivals__info--distinction"><img class="arrivals__icon" src="./assets/img/bolt.png" alt="bolt icon">NEW</p>
-          <p class="arrivals__info arrivals__info">Some fancy outfit</p>
-          <p class="arrivals__info arrivals__info--distinction">$300</p>
-        </div>
-      </div>
-      <div class="arrivals__item">
-        <img class="arrivals__img" src="https://via.placeholder.com/309x390" alt="placeholder"/>
-        <div class="arrivals__info-cnt">
-          <p class="arrivals__info arrivals__info--distinction arrivals__info--hidden">New!</p>
-          <p class="arrivals__info arrivals__info">Some fancy outfit</p>
-          <p class="arrivals__info arrivals__info--distinction">$300</p>
-        </div>
-      </div>
-      <div class="arrivals__item">
-        <img class="arrivals__img" src="https://via.placeholder.com/309x390" alt="placeholder"/>
-        <div class="arrivals__info-cnt">
-          <p class="arrivals__info arrivals__info--distinction arrivals__info--hidden">New!</p>
-          <p class="arrivals__info arrivals__info">Some fancy outfit</p>
-          <p class="arrivals__info arrivals__info--distinction">$300</p>
-        </div>
-      </div>
-      <div class="arrivals__item">
-        <img class="arrivals__img" src="https://via.placeholder.com/309x390" alt="placeholder"/>
-        <div class="arrivals__info-cnt">
-          <p class="arrivals__info arrivals__info--distinction"><img class="arrivals__icon" src="./assets/img/medal.png" alt="medal icon">BEST SELLER</p>
-          <p class="arrivals__info arrivals__info">Some fancy outfit</p>
-          <p class="arrivals__info arrivals__info--distinction">$300</p>
-        </div>
-      </div>
-      <div class="arrivals__item">
-        <img class="arrivals__img" src="https://via.placeholder.com/309x390" alt="placeholder"/>
-        <div class="arrivals__info-cnt">
-          <p class="arrivals__info arrivals__info--distinction"><img class="arrivals__icon" src="./assets/img/medal.png" alt="medal icon">BEST SELLER</p>
-          <p class="arrivals__info arrivals__info">Some fancy outfit</p>
-          <p class="arrivals__info arrivals__info--distinction">$300</p>
-        </div>
-      </div>
-      <div class="arrivals__item">
-        <img class="arrivals__img" src="https://via.placeholder.com/309x390" alt="placeholder"/>
-        <div class="arrivals__info-cnt">
-          <p class="arrivals__info arrivals__info--distinction"><img class="arrivals__icon" src="./assets/img/fire.png" alt="fire icon">HOT!</p>
-          <p class="arrivals__info arrivals__info">Some fancy outfit</p>
-          <p class="arrivals__info arrivals__info--distinction">$300</p>
-        </div>
-      </div>
-      <div class="arrivals__item">
-        <img class="arrivals__img" src="https://via.placeholder.com/309x390" alt="placeholder"/>
-        <div class="arrivals__info-cnt">
-          <p class="arrivals__info arrivals__info--distinction"><img class="arrivals__icon" src="./assets/img/star.png" alt="star icon">TOP RATE</p>
-          <p class="arrivals__info arrivals__info">Some fancy outfit</p>
-          <p class="arrivals__info arrivals__info--distinction">$300</p>
-        </div>
-      </div>
-      <div class="arrivals__item">
-        <img class="arrivals__img" src="https://via.placeholder.com/309x390" alt="placeholder"/>
-        <div class="arrivals__info-cnt">
-          <p class="arrivals__info arrivals__info--distinction"><img class="arrivals__icon" src="./assets/img/few.png" alt="star icon">ONLY A FEW LEFT</p>
-          <p class="arrivals__info arrivals__info">Some fancy outfit</p>
-          <p class="arrivals__info arrivals__info--distinction">$300</p>
-        </div>
-      </div>
     </div>
-    <button class="arrivals__button">All products</button>
+    <div class="loader loader--dark">
+      <div class="loader__box loader__box--kinetic"></div>
+      <div class="loader__text">Waiting for data</div>
+    </div>
+    <button class="arrivals__button">Add products</button>
   </section>
   <section class="themes">
     <div class="themes__cnt">
-      <div class="themes__element themes__element--big">
-        <img class="themes__img" src="https://picsum.photos/510/640" alt="placeholder"/>
-        <div class="themes__info">
-          <p class="themes__title">Sample text for sample theme</p>
-          <a class="themes__link" href="#">Shop now</a>
-        </div>
-      </div>
-      <div class="themes__element themes__element--normal">
-        <img class="themes__img" src="https://picsum.photos/380/315" alt="placeholder"/>
-        <div class="themes__info">
-          <p class="themes__title">Sample text for sample theme</p>
-          <a class="themes__link" href="#">Shop now</a>
-        </div>
-      </div>
-      <div class="themes__element themes__element--normal">
-        <img class="themes__img" src="https://picsum.photos/380/315" alt="placeholder"/>
-        <div class="themes__info">
-          <p class="themes__title">Sample text for sample theme</p>
-          <a class="themes__link" href="#">Shop now</a>
-        </div>
-      </div>
-      <div class="themes__element themes__element--long">
-        <img class="themes__img" src="https://picsum.photos/775/315" alt="placeholder"/>
-        <div class="themes__info">
-          <p class="themes__title">Sample text for sample theme</p>
-          <a class="themes__link" href="#">Shop now</a>
-        </div>
-      </div>
+    </div>
+    <div class="loader loader--dark">
+      <div class="loader__box loader__box--kinetic"></div>
+      <div class="loader__text">Waiting for data</div>
     </div>
   </section>
   <section class="newsletter">
